Sua ngay 16/10 luc 2h 45

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
 eclipse.preferences.version=1
+encoding//Nguoisd/index.php=UTF-8
+encoding//admin/Listbaidang.php=UTF-8
+encoding//admin/Listnguoidung.php=UTF-8
 encoding//admin/index.php=UTF-8
 encoding//admin/menu.php=UTF-8
+encoding//admin/xoanguoidung.php=UTF-8
 encoding//blocks/footer.php=UTF-8
 encoding//blocks/menu.php=UTF-8
 encoding//blocks/top_trang_chu.php=UTF-8
